--- a/index.html
+++ b/index.html
@@ -3,17 +3,27 @@
 <head>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.16/angular.min.js"></script>
 	<script src="http://momentjs.com/downloads/moment.min.js"></script>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link rel="stylesheet" href="style.css">
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="app.js"></script>
 	<title>Clock-in/Clock-out</title>
 </head>
 <body data-ng-app="clocking" data-ng-controller="main">
 	<div>
-		<div id="time">{{time}}</div>
-		<button data-ng-hide="timeRunning" data-ng-click="decreaseHours()">-</button>
-		<div id="numberOfHours">Working hours:{{workingHours}}</div>
-		<button data-ng-hide="timeRunning" data-ng-click="increaseHours()">+</button>
-		<button data-ng-hide="timeRunning" data-ng-click="startClocking()" name="clockButton" type="button">{{startLabel}}</button>
-		<button data-ng-click="toggleBreak()" name="breakButton" type="button" value="Break">{{breakLabel}}</button>
+		<div class="row">
+			<div class="center col-xs-offset-5 col-xs-2" id="time">{{time}}</div>
+		</div>
+		<div class="row">
+			<button class="col-xs-offset-4 col-xs-1"data-ng-hide="timeRunning" data-ng-click="decreaseHours()">-</button>
+			<div class="center col-xs-2" id="numberOfHours">Working hours:{{workingHours}}</div>
+			<button class="col-xs-1" data-ng-hide="timeRunning" data-ng-click="increaseHours()">+</button>
+		</div>
+		<div class="row">
+			<button class="col-xs-offset-5 col-xs-2"data-ng-hide="timeRunning" data-ng-click="startClocking()" name="clockButton" type="button">{{startLabel}}</button>
+			<button data-ng-show="timeRunning" data-ng-click="toggleBreak()" name="breakButton" type="button" value="Break">{{breakLabel}}</button>
+			<div data-ng-show="timeRunning" id="endTime">End time: {{endTimeString}} - Last break: {{$scope.length}} minutes</div>
+		</div>
 	</div>
 </body>
 </html>
